# awitree

./: .gitignore  README.md  environment.yml  package-lock.json  package.json  pyproject.toml
js/: tree.css  tree.js
notebooks/: example.ipynb  mo_example.py
src/awitree/: __init__.py
